--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basquete</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #1E90FF;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            margin: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 0 20px;
+        }
+        p {
+            line-height: 1.6;
+        }
+        footer {
+            background-color: #1E90FF;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Basquete</h1>
+        <p>Explore o mundo emocionante do basquete!</p>
+    </header>
+    <div class="container">
+        <h2>História do Basquete</h2>
+        <p>O basquete é um esporte de equipe amplamente praticado em todo o mundo. Foi inventado em 1891 por James Naismith, um professor de educação física canadense, como uma forma de manter seus alunos ativos durante o inverno. Desde então, o basquete se tornou um dos esportes mais populares, com ligas profissionais, torneios internacionais e milhões de fãs em todo o mundo.</p>
+        
+        <h2>Regras Básicas</h2>
+        <p>O objetivo do basquete é marcar pontos jogando a bola através do aro do adversário. As regras básicas incluem:</p>
+        <ul>
+            <li>Cada equipe tem cinco jogadores em quadra.</li>
+            <li>O jogo é dividido em quatro quartos, geralmente com 12 minutos cada.</li>
+            <li>Os jogadores podem driblar a bola, passá-la entre si e arremessá-la em direção ao aro para marcar pontos.</li>
+            <li>Pontos são concedidos por arremessos bem-sucedidos dentro do arco, valendo dois pontos para arremessos de campo e um ponto para lances livres.</li>
+            <li>A equipe com mais pontos no final do jogo vence.</li>
+        </ul>
+        
+        <h2>Jogadores Famosos</h2>
+        <p>O basquete produziu muitos jogadores lendários ao longo dos anos. Alguns dos mais famosos incluem:</p>
+        <ul>
+            <li>Michael Jordan</li>
+            <li>LeBron James</li>
+            <li>Kobe Bryant</li>
+            <li>Stephen Curry</li>
+            <li>Shaquille O'Neal</li>
+        </ul>
+    </div>
+    <footer>
+        <p>Copyright &copy; 2024 | Basquete</p>
+    </footer>
+
+    <!-- Adicionando uma imagem -->
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Basketball.png/220px-Basketball.png" alt="Bola de Basquete" style="display: block; margin: 20px auto;">
+</body>
+</html>
 
